lib/src/ffi/xhvp_bindings.dart

// ignore_for_file: always_specify_types, type_annotate_public_apis
// ignore_for_file: camel_case_types, non_constant_identifier_names
// ignore_for_file: unused_element, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for xue_hua_video_player native C ABI.
class XhvpBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  XhvpBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  XhvpBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<ffi.Char> xhvp_version() {
    return _xhvp_version();
  }

  late final _xhvp_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'xhvp_version',
      );
  late final _xhvp_version = _xhvp_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  int xhvp_init() {
    return _xhvp_init();
  }

  late final _xhvp_initPtr = _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
    'xhvp_init',
  );
  late final _xhvp_init = _xhvp_initPtr.asFunction<int Function()>();

  void xhvp_shutdown() {
    return _xhvp_shutdown();
  }

  late final _xhvp_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('xhvp_shutdown');
  late final _xhvp_shutdown = _xhvp_shutdownPtr.asFunction<void Function()>();

  int xhvp_player_create() {
    return _xhvp_player_create();
  }

  late final _xhvp_player_createPtr =
      _lookup<ffi.NativeFunction<XhvpPlayerId Function()>>(
        'xhvp_player_create',
      );
  late final _xhvp_player_create = _xhvp_player_createPtr
      .asFunction<int Function()>();

  void xhvp_player_dispose(int id) {
    return _xhvp_player_dispose(id);
  }

  late final _xhvp_player_disposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(XhvpPlayerId)>>(
        'xhvp_player_dispose',
      );
  late final _xhvp_player_dispose = _xhvp_player_disposePtr
      .asFunction<void Function(int)>();

  void xhvp_player_set_event_callback(
    int id,
    ffi.Pointer<ffi.Void> ctx,
    XhvpEventCallback cb,
  ) {
    return _xhvp_player_set_event_callback(id, ctx, cb);
  }

  late final _xhvp_player_set_event_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            XhvpPlayerId,
            ffi.Pointer<ffi.Void>,
            XhvpEventCallback,
          )
        >
      >('xhvp_player_set_event_callback');
  late final _xhvp_player_set_event_callback =
      _xhvp_player_set_event_callbackPtr
          .asFunction<
            void Function(int, ffi.Pointer<ffi.Void>, XhvpEventCallback)
          >();

  int xhvp_player_load_uri(int id, ffi.Pointer<ffi.Char> uri, bool auto_play) {
    return _xhvp_player_load_uri(id, uri, auto_play);
  }

  late final _xhvp_player_load_uriPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(XhvpPlayerId, ffi.Pointer<ffi.Char>, ffi.Bool)
        >
      >('xhvp_player_load_uri');
  late final _xhvp_player_load_uri = _xhvp_player_load_uriPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>, bool)>();

  int xhvp_player_load_asset(
    int id,
    ffi.Pointer<ffi.Char> asset_key,
    ffi.Pointer<ffi.Char> package,
    ffi.Pointer<ffi.Uint8> bytes,
    int len,
    bool auto_play,
  ) {
    return _xhvp_player_load_asset(
      id,
      asset_key,
      package,
      bytes,
      len,
      auto_play,
    );
  }

  late final _xhvp_player_load_assetPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            XhvpPlayerId,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Bool,
          )
        >
      >('xhvp_player_load_asset');
  late final _xhvp_player_load_asset = _xhvp_player_load_assetPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          int,
          bool,
        )
      >();

  int xhvp_player_play(int id) {
    return _xhvp_player_play(id);
  }

  late final _xhvp_player_playPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId)>>(
        'xhvp_player_play',
      );
  late final _xhvp_player_play = _xhvp_player_playPtr
      .asFunction<int Function(int)>();

  int xhvp_player_pause(int id) {
    return _xhvp_player_pause(id);
  }

  late final _xhvp_player_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId)>>(
        'xhvp_player_pause',
      );
  late final _xhvp_player_pause = _xhvp_player_pausePtr
      .asFunction<int Function(int)>();

  int xhvp_player_stop(int id) {
    return _xhvp_player_stop(id);
  }

  late final _xhvp_player_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId)>>(
        'xhvp_player_stop',
      );
  late final _xhvp_player_stop = _xhvp_player_stopPtr
      .asFunction<int Function(int)>();

  int xhvp_player_seek(int id, int position_ms) {
    return _xhvp_player_seek(id, position_ms);
  }

  late final _xhvp_player_seekPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Int64)>>(
        'xhvp_player_seek',
      );
  late final _xhvp_player_seek = _xhvp_player_seekPtr
      .asFunction<int Function(int, int)>();

  int xhvp_player_set_volume(int id, double volume) {
    return _xhvp_player_set_volume(id, volume);
  }

  late final _xhvp_player_set_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Double)>>(
        'xhvp_player_set_volume',
      );
  late final _xhvp_player_set_volume = _xhvp_player_set_volumePtr
      .asFunction<int Function(int, double)>();

  int xhvp_player_set_mute(int id, bool mute) {
    return _xhvp_player_set_mute(id, mute);
  }

  late final _xhvp_player_set_mutePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Bool)>>(
        'xhvp_player_set_mute',
      );
  late final _xhvp_player_set_mute = _xhvp_player_set_mutePtr
      .asFunction<int Function(int, bool)>();

  int xhvp_player_set_speed(int id, double speed) {
    return _xhvp_player_set_speed(id, speed);
  }

  late final _xhvp_player_set_speedPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Double)>>(
        'xhvp_player_set_speed',
      );
  late final _xhvp_player_set_speed = _xhvp_player_set_speedPtr
      .asFunction<int Function(int, double)>();

  int xhvp_player_set_looping(int id, bool looping) {
    return _xhvp_player_set_looping(id, looping);
  }

  late final _xhvp_player_set_loopingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Bool)>>(
        'xhvp_player_set_looping',
      );
  late final _xhvp_player_set_looping = _xhvp_player_set_loopingPtr
      .asFunction<int Function(int, bool)>();

  int xhvp_player_get_capabilities(
    int id,
    ffi.Pointer<ffi.Bool> seek,
    ffi.Pointer<ffi.Bool> tracks,
    ffi.Pointer<ffi.Bool> orientation,
  ) {
    return _xhvp_player_get_capabilities(id, seek, tracks, orientation);
  }

  late final _xhvp_player_get_capabilitiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            XhvpPlayerId,
            ffi.Pointer<ffi.Bool>,
            ffi.Pointer<ffi.Bool>,
            ffi.Pointer<ffi.Bool>,
          )
        >
      >('xhvp_player_get_capabilities');
  late final _xhvp_player_get_capabilities = _xhvp_player_get_capabilitiesPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Bool>,
          ffi.Pointer<ffi.Bool>,
          ffi.Pointer<ffi.Bool>,
        )
      >();

  int xhvp_player_get_track_count(int id) {
    return _xhvp_player_get_track_count(id);
  }

  late final _xhvp_player_get_track_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId)>>(
        'xhvp_player_get_track_count',
      );
  late final _xhvp_player_get_track_count = _xhvp_player_get_track_countPtr
      .asFunction<int Function(int)>();

  int xhvp_player_get_track(
    int id,
    int index,
    ffi.Pointer<ffi.Int32> out_id,
    ffi.Pointer<ffi.Int32> out_type,
    ffi.Pointer<ffi.Char> language,
    int language_len,
    ffi.Pointer<ffi.Char> label,
    int label_len,
    ffi.Pointer<ffi.Bool> selected,
  ) {
    return _xhvp_player_get_track(
      id,
      index,
      out_id,
      out_type,
      language,
      language_len,
      label,
      label_len,
      selected,
    );
  }

  late final _xhvp_player_get_trackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            XhvpPlayerId,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Uint32,
            ffi.Pointer<ffi.Bool>,
          )
        >
      >('xhvp_player_get_track');
  late final _xhvp_player_get_track = _xhvp_player_get_trackPtr
      .asFunction<
        int Function(
          int,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Bool>,
        )
      >();

  int xhvp_player_select_track(
    int id,
    int track_id,
    int track_type,
    bool enable,
  ) {
    return _xhvp_player_select_track(id, track_id, track_type, enable);
  }

  late final _xhvp_player_select_trackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(XhvpPlayerId, ffi.Int32, ffi.Int32, ffi.Bool)
        >
      >('xhvp_player_select_track');
  late final _xhvp_player_select_track = _xhvp_player_select_trackPtr
      .asFunction<int Function(int, int, int, bool)>();

  int xhvp_player_set_video_rotation(int id, int rotate_degrees) {
    return _xhvp_player_set_video_rotation(id, rotate_degrees);
  }

  late final _xhvp_player_set_video_rotationPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Int32)>>(
        'xhvp_player_set_video_rotation',
      );
  late final _xhvp_player_set_video_rotation =
      _xhvp_player_set_video_rotationPtr.asFunction<int Function(int, int)>();

  int xhvp_player_set_aspect_ratio_mode(int id, int mode) {
    return _xhvp_player_set_aspect_ratio_mode(id, mode);
  }

  late final _xhvp_player_set_aspect_ratio_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(XhvpPlayerId, ffi.Int32)>>(
        'xhvp_player_set_aspect_ratio_mode',
      );
  late final _xhvp_player_set_aspect_ratio_mode =
      _xhvp_player_set_aspect_ratio_modePtr
          .asFunction<int Function(int, int)>();

  /// Android: cache ANativeWindow pointer (as intptr) from JNI thread.
  void xhvp_player_notify_android_surface(
    int id,
    int native_window,
    int width,
    int height,
  ) {
    return _xhvp_player_notify_android_surface(
      id,
      native_window,
      width,
      height,
    );
  }

  late final _xhvp_player_notify_android_surfacePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(XhvpPlayerId, ffi.Int64, ffi.Int32, ffi.Int32)
        >
      >('xhvp_player_notify_android_surface');
  late final _xhvp_player_notify_android_surface =
      _xhvp_player_notify_android_surfacePtr
          .asFunction<void Function(int, int, int, int)>();

  void xhvp_player_clear_android_surface(int id) {
    return _xhvp_player_clear_android_surface(id);
  }

  late final _xhvp_player_clear_android_surfacePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(XhvpPlayerId)>>(
        'xhvp_player_clear_android_surface',
      );
  late final _xhvp_player_clear_android_surface =
      _xhvp_player_clear_android_surfacePtr.asFunction<void Function(int)>();

  void xhvp_texture_register(
    int player_id,
    ffi.Pointer<ffi.Void> ctx,
    XhvpFrameReadyFn on_frame,
  ) {
    return _xhvp_texture_register(player_id, ctx, on_frame);
  }

  late final _xhvp_texture_registerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Void>, XhvpFrameReadyFn)
        >
      >('xhvp_texture_register');
  late final _xhvp_texture_register = _xhvp_texture_registerPtr
      .asFunction<
        void Function(int, ffi.Pointer<ffi.Void>, XhvpFrameReadyFn)
      >();

  void xhvp_texture_unregister(int player_id) {
    return _xhvp_texture_unregister(player_id);
  }

  late final _xhvp_texture_unregisterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'xhvp_texture_unregister',
      );
  late final _xhvp_texture_unregister = _xhvp_texture_unregisterPtr
      .asFunction<void Function(int)>();

  bool xhvp_texture_frame_info(
    int player_id,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Int32> out_stride,
    ffi.Pointer<ffi.Uint32> out_bytes,
  ) {
    return _xhvp_texture_frame_info(
      player_id,
      out_width,
      out_height,
      out_stride,
      out_bytes,
    );
  }

  late final _xhvp_texture_frame_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int64,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Uint32>,
          )
        >
      >('xhvp_texture_frame_info');
  late final _xhvp_texture_frame_info = _xhvp_texture_frame_infoPtr
      .asFunction<
        bool Function(
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Uint32>,
        )
      >();

  bool xhvp_texture_copy_latest(
    int player_id,
    ffi.Pointer<ffi.Uint8> dst,
    int dst_len,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Int32> out_stride,
  ) {
    return _xhvp_texture_copy_latest(
      player_id,
      dst,
      dst_len,
      out_width,
      out_height,
      out_stride,
    );
  }

  late final _xhvp_texture_copy_latestPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('xhvp_texture_copy_latest');
  late final _xhvp_texture_copy_latest = _xhvp_texture_copy_latestPtr
      .asFunction<
        bool Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();
}

typedef XhvpPlayerId = ffi.Int64;
typedef DartXhvpPlayerId = int;

/// Matches Dart [PlayerEventKind] ordinal order.
enum XhvpEventKind {
  XHVP_EVENT_DURATION_CHANGED(0),
  XHVP_EVENT_POSITION_CHANGED(1),
  XHVP_EVENT_VIDEO_SIZE(2),
  XHVP_EVENT_STATE_CHANGED(3),
  XHVP_EVENT_BUFFERING(4),
  XHVP_EVENT_EOS(5),
  XHVP_EVENT_ERROR(6),
  XHVP_EVENT_TRACKS_CHANGED(7),
  XHVP_EVENT_METADATA_CHANGED(8);

  final int value;
  const XhvpEventKind(this.value);

  static XhvpEventKind fromValue(int value) => switch (value) {
    0 => XHVP_EVENT_DURATION_CHANGED,
    1 => XHVP_EVENT_POSITION_CHANGED,
    2 => XHVP_EVENT_VIDEO_SIZE,
    3 => XHVP_EVENT_STATE_CHANGED,
    4 => XHVP_EVENT_BUFFERING,
    5 => XHVP_EVENT_EOS,
    6 => XHVP_EVENT_ERROR,
    7 => XHVP_EVENT_TRACKS_CHANGED,
    8 => XHVP_EVENT_METADATA_CHANGED,
    _ => throw ArgumentError('Unknown value for XhvpEventKind: $value'),
  };
}

/// Matches Dart [PlayerState] ordinal order.
enum XhvpPlayerState {
  XHVP_STATE_IDLE(0),
  XHVP_STATE_READY(1),
  XHVP_STATE_BUFFERING(2),
  XHVP_STATE_PLAYING(3),
  XHVP_STATE_PAUSED(4),
  XHVP_STATE_STOPPED(5),
  XHVP_STATE_COMPLETED(6),
  XHVP_STATE_ERROR(7);

  final int value;
  const XhvpPlayerState(this.value);

  static XhvpPlayerState fromValue(int value) => switch (value) {
    0 => XHVP_STATE_IDLE,
    1 => XHVP_STATE_READY,
    2 => XHVP_STATE_BUFFERING,
    3 => XHVP_STATE_PLAYING,
    4 => XHVP_STATE_PAUSED,
    5 => XHVP_STATE_STOPPED,
    6 => XHVP_STATE_COMPLETED,
    7 => XHVP_STATE_ERROR,
    _ => throw ArgumentError('Unknown value for XhvpPlayerState: $value'),
  };
}

/// Matches Dart [TrackType] ordinal order.
enum XhvpTrackType {
  XHVP_TRACK_AUDIO(0),
  XHVP_TRACK_VIDEO(1),
  XHVP_TRACK_SUBTITLE(2);

  final int value;
  const XhvpTrackType(this.value);

  static XhvpTrackType fromValue(int value) => switch (value) {
    0 => XHVP_TRACK_AUDIO,
    1 => XHVP_TRACK_VIDEO,
    2 => XHVP_TRACK_SUBTITLE,
    _ => throw ArgumentError('Unknown value for XhvpTrackType: $value'),
  };
}

/// Matches Dart [AspectRatioMode] ordinal order.
enum XhvpAspectRatioMode {
  XHVP_ASPECT_FIT(0),
  XHVP_ASPECT_FILL(1),
  XHVP_ASPECT_STRETCH(2);

  final int value;
  const XhvpAspectRatioMode(this.value);

  static XhvpAspectRatioMode fromValue(int value) => switch (value) {
    0 => XHVP_ASPECT_FIT,
    1 => XHVP_ASPECT_FILL,
    2 => XHVP_ASPECT_STRETCH,
    _ => throw ArgumentError('Unknown value for XhvpAspectRatioMode: $value'),
  };
}

typedef XhvpEventCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Void> ctx,
      ffi.Int32 kind,
      ffi.Int64 position_ms,
      ffi.Int64 duration_ms,
      ffi.Int32 width,
      ffi.Int32 height,
      ffi.Int32 buffering_percent,
      ffi.Int32 state,
      ffi.Pointer<ffi.Char> message,
      ffi.Double fps,
      ffi.Int32 par_n,
      ffi.Int32 par_d,
      ffi.Int32 dar_n,
      ffi.Int32 dar_d,
      ffi.Bool interlaced,
      ffi.Pointer<ffi.Char> color_matrix,
      ffi.Pointer<ffi.Char> color_range,
      ffi.Pointer<ffi.Char> hdr_format,
      ffi.Bool is_seekable,
    );
typedef DartXhvpEventCallbackFunction =
    void Function(
      ffi.Pointer<ffi.Void> ctx,
      int kind,
      int position_ms,
      int duration_ms,
      int width,
      int height,
      int buffering_percent,
      int state,
      ffi.Pointer<ffi.Char> message,
      double fps,
      int par_n,
      int par_d,
      int dar_n,
      int dar_d,
      bool interlaced,
      ffi.Pointer<ffi.Char> color_matrix,
      ffi.Pointer<ffi.Char> color_range,
      ffi.Pointer<ffi.Char> hdr_format,
      bool is_seekable,
    );
typedef XhvpEventCallback =
    ffi.Pointer<ffi.NativeFunction<XhvpEventCallbackFunction>>;
typedef XhvpFrameReadyFnFunction = ffi.Void Function(ffi.Pointer<ffi.Void> ctx);
typedef DartXhvpFrameReadyFnFunction = void Function(ffi.Pointer<ffi.Void> ctx);
typedef XhvpFrameReadyFn =
    ffi.Pointer<ffi.NativeFunction<XhvpFrameReadyFnFunction>>;
